# hermes-cloud-studio

./: .dockerignore  .env.example  .env.hermes.example  .gitignore  .mcp.example.json  CLAUDE.md  Dockerfile  Hermes.bat  Hermes.lnk  Hermes.ps1  README.md  VERSION  _health_ep.py  _vm_cobaia_c6_patch.py  _vm_p2_patcher.py  _vm_p2b_patcher.py  _vm_p2c_patcher.py  cloudflared.yml  config.py  create_icon.py  create_last_run.py  docker-compose.yml  gosom_scraper.py  hermes_api_v2.py  hermes_desktop.py  night_scraper.py  patch_api.py  patch_audit_api.py  patch_outreach_api.py  proxy-tunnel.ps1  pytest.ini  requirements.txt  restart_api.sh  server.py  setup_vm.sh  setup_vm_complete.sh  socks5_proxy.py  telegram_bridge.py
.claude/: .gitignore  AUDIT-2026-06-08-FASE-F.md  AUDIT-BRAINS-RESEARCH.md  AUDIT.md  DEEP-AUDIT-2026-06-08.md  DEPLOY-FASE-F.md  DESIGN-SYSTEM-TOKENS.md  F34-SMOKE-EVIDENCE.md  F66-HOLISTIC-REVIEWER-REPORT.md  F7-OWNER-ACTIONS.md  F7-PREP.md  F7-SCHEDULE-ARCH-DECISION.md  FRONTEND-GAP.md  GUARDRAILS.md  HARNESS-EXTENSION-PATCH.md  HERMES-2.0-ACCESS-DEPLOY.md  HERMES-2.0-BUILD1-DESIGN.md  HERMES-2.0-DESIGN-STATE.md  HERMES-2.0-FOUNDATION-EXEC.md  HERMES-2.0-LAYERS-CATALOG.md  HERMES-2.0-ORCHESTRATOR-ROLE.md  HERMES-2.0-PLAN.md  HERMES-2.0-UIUX-PLAN.md  HOW-TO-START-PHASE.md  IMPLEMENTATION-PLAN-FASE-F.md  IMPLEMENTATION-PLAN.md  LANDSCAPE.md  MARKETING-AUDIT-VIABILITY.md  MCP-BANNED-PATTERNS.json  MCP-ENFORCEMENT-STRATEGY.md  MIGRATIONS-FASE-F.md  NVIDIA-INTEGRATION-PLAN.md  (+27 more)
api/: icp.py  (+33 more)
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs
(+468 files in other folders)
